quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graph__graphviz_dot_tests__custom_handler__mixed_pragmas_and_pulses.snap
---
source: quil-rs/src/program/scheduling/graph.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering"];
    "block_0_start" -> "block_0_1" [label="ordering
timing"];
    "block_0_start" -> "block_0_2" [label="ordering
timing"];
    "block_0_start" -> "block_0_4" [label="ordering"];
    "block_0_start" -> "block_0_5" [label="ordering
timing"];
    "block_0_start" -> "block_0_7" [label="ordering
timing"];
    "block_0_start" -> "block_0_8" [label="ordering
timing"];
    "block_0_start" -> "block_0_9" [label="ordering"];
    "block_0_start" -> "block_0_end" [label="ordering
timing"];
    "block_0_0" [shape=rectangle, label="[0] PRAGMA NO-OP"];
    "block_0_0" -> "block_0_end" [label="ordering"];
    "block_0_1" [shape=rectangle, label="[1] PRAGMA RAW-INSTRUCTION foo"];
    "block_0_1" -> "block_0_3" [label="ordering
timing"];
    "block_0_2" [shape=rectangle, label="[2] PULSE 1 \"bar\" gaussian(duration: 1, fwhm: 2, t0: 3)"];
    "block_0_2" -> "block_0_3" [label="ordering
timing"];
    "block_0_2" -> "block_0_end" [label="ordering
timing"];
    "block_0_3" [shape=rectangle, label="[3] PRAGMA RAW-INSTRUCTION foo bar"];
    "block_0_3" -> "block_0_5" [label="ordering
timing"];
    "block_0_3" -> "block_0_6" [label="ordering
timing"];
    "block_0_4" [shape=rectangle, label="[4] PRAGMA NO-OP"];
    "block_0_4" -> "block_0_end" [label="ordering"];
    "block_0_5" [shape=rectangle, label="[5] PULSE 0 \"foo\" gaussian(duration: 1, fwhm: 2, t0: 3)"];
    "block_0_5" -> "block_0_7" [label="ordering
timing"];
    "block_0_5" -> "block_0_end" [label="ordering
timing"];
    "block_0_6" [shape=rectangle, label="[6] PRAGMA RAW-INSTRUCTION bar"];
    "block_0_6" -> "block_0_8" [label="ordering
timing"];
    "block_0_7" [shape=rectangle, label="[7] PULSE 0 \"foo\" gaussian(duration: 1, fwhm: 2, t0: 3)"];
    "block_0_7" -> "block_0_10" [label="ordering
timing"];
    "block_0_7" -> "block_0_end" [label="ordering
timing"];
    "block_0_8" [shape=rectangle, label="[8] PULSE 1 \"bar\" gaussian(duration: 1, fwhm: 2, t0: 3)"];
    "block_0_8" -> "block_0_end" [label="ordering
timing"];
    "block_0_9" [shape=rectangle, label="[9] PRAGMA NO-OP"];
    "block_0_9" -> "block_0_end" [label="ordering"];
    "block_0_10" [shape=rectangle, label="[10] PRAGMA RAW-INSTRUCTION foo"];
    "block_0_10" -> "block_0_end" [label="ordering
timing"];
    "block_0_end" [shape=circle, label="end"];
  }
}
